samples/_failures_safe/1761351057_84df93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78ed71e7.c: In function ‘main’:
./samples/SAFE/__tmp_78ed71e7.c:154:17: error: expected expression at end of input
  154 |                 int status = add_matrices(&mat1, &mat2, &
      |                 ^~~
./samples/SAFE/__tmp_78ed71e7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78ed71e7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78ed71e7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78ed71e7.c:154:17: error: expected declaration or statement at end of input
